worker: Deprecate the WORKER_RELEASE env var
Instead the worker e2e suite will use sed to replace
the worker release at runtime.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,8 +2,13 @@
   "extends": ["github>balena-io/renovate-config//.github/renovate"],
   "regexManagers": [
     {
-      "fileMatch": ["(^|/)(?:docker-)?compose[^/]*\\.ya?ml$"],
-      "matchStrings": ["{WORKER_RELEASE:-(?<currentValue>.*?)}"],
+      "fileMatch": [
+        "(^|\\/)(?:docker-)?compose[^/]*\\.ya?ml$",
+        "(^|\\/)Dockerfile(\\.[[:alnum:]]+)?$"
+      ],
+      "matchStrings": [
+        "bh\\.cr/balena/leviathan-worker(-[^/]+)?/(?<currentValue>.*?)\\n"
+      ],
       "depNameTemplate": "balena-os/leviathan-worker",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>.*)$"
