e2e: Switch from rpi4 to rpi3 for e2e tests
The rpi3 devices in the rig seemed more reliable
and there are more of them.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -55,7 +55,7 @@ jobs:
             WORKER_TYPE: qemu
           - DEVICE_TYPE: generic-aarch64
             WORKER_TYPE: qemu
-          - DEVICE_TYPE: raspberrypi4-64
+          - DEVICE_TYPE: raspberrypi3
             WORKER_TYPE: testbot
 
     steps:
