--- a/core/package.json
+++ b/core/package.json
@@ -1,36 +1,36 @@
 {
 	"scripts": {
-		"lint:fix": "balena-lint -e js -e ts --fix lib/**/*",
-		"lint": "balena-lint -u -e js -e ts --tests lib/**/*",
+		"lint:fix": "balena-lint -e js --fix lib/**/*",
+		"lint": "balena-lint -u -e js --tests lib/**/*",
 		"start": "node lib/main.js",
 		"docs": "rimraf ../docs/ && npx typedoc --tsconfig tsconfig.json"
 	},
 	"dependencies": {
-		"ajv": "^6.5.0",
-		"ajv-semver": "^1.0.4",
+		"ajv": "^6.12.6",
+		"ajv-semver": "^1.0.5",
 		"any-promise": "^1.3.0",
-		"balena-image-fs": "^7.0.6",
-		"balena-sdk": "^16.12.1",
-		"bluebird": "^3.5.1",
+		"balena-image-fs": "^7.2.0",
+		"balena-sdk": "^16.32.1",
+		"bluebird": "^3.7.2",
 		"bluebird-retry": "^0.11.0",
-		"express": "^4.17.1",
-		"express-ws": "^4.0.0",
-		"fs-extra": "^3.0.1",
-		"lodash": "^4.17.10",
-		"md5-file": "^4.0.0",
+		"express": "^4.18.2",
+		"express-ws": "^5.0.2",
+		"fs-extra": "^11.1.0",
+		"lodash": "^4.17.21",
+		"md5-file": "^5.0.0",
 		"mz": "^2.7.0",
-		"node-ssh": "^12.0.4",
-		"request": "^2.88.0",
-		"request-promise": "^4.2.4",
+		"node-ssh": "^13.0.1",
+		"request": "^2.88.2",
+		"request-promise": "^4.2.6",
 		"ssh-keygen-lite": "^1.3.0",
-		"tap": "^14.10.8",
-		"tar-fs": "^2.0.0",
+		"tap": "^16.3.4",
+		"tar-fs": "^2.1.1",
 		"tmp": "^0.2.1",
-		"ws": "^7.1.2"
+		"ws": "^8.12.0"
 	},
 	"devDependencies": {
-		"@balena/lint": "^6.2.0",
-		"rimraf": "^3.0.2",
+		"@balena/lint": "^6.2.1",
+		"rimraf": "^4.1.2",
 		"typedoc": "^0.23.0",
 		"typedoc-plugin-pages-fork": "0.0.1",
 		"typescript": "^4.4.4"
